--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "drewm/mailchimp-api": "^2.5",
         "guzzlehttp/guzzle": "^7.6",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
@@ -13,6 +14,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
         "php-open-source-saver/jwt-auth": "^2.0",
+        "spatie/laravel-newsletter": "^5.1",
+        "spatie/mailcoach-sdk-php": "^1.3",
         "stripe/stripe-php": "^10.11"
     },
     "require-dev": {
